change the principal to a new TransientUser instance and add user id